# Cpp23AsciiRayTracer

./: CMakeLists.txt  Readme.md  cube.hpp  image.hpp  main.cpp  plane.hpp  r  ray.hpp  scene.hpp  shape.hpp  sphere.hpp  t.cpp  vec3.hpp
resources/: Readme.md
